# NeuroTop

./: .gitignore  00_plot_results.py  00a_train.py  01_run_experiment.py  01b_extract_activations.py  01c_analyze_topology.py  02_run_advanced_analysis.py  02a_test_neuron_removal.py  02b_run_ablation_suite.py  README.md  flake.nix  pyproject.toml  requirements.txt
configs/: config.yaml  fashion_baseline.yaml  gird_search.yaml  grid_search2.yaml  mnist_baseline.yaml  mnist_grid.yaml  v2.yaml
examples/: 01_bert.py  02_bert_gated.py  ablate_BERT.py  ablate_MLP.py  bert.py  bert.sh  bert_slurm.sh  bert_wikipedia.py  ex1_paper.py  fashion_mnist_mlp.py  final_experiments.py  glue_BERT.py  math_chapter_plots.py  pruning_sweep.py  rl_pruning.py  thesis_plots.py  visualize_analysis.py  viz.py
examples/bert/: 01_bert.py  02_bert_gated.py  analisis.py  ex1_training.py  ex2_pruning.py  model.py
examples/cifar/: analisis.py  ex1_training.py  ex2_pruning.py  model.py
examples/modulus/: analisis.py  ex1_grokking.py  ex2_pruning.py  model.py  neuron_audit.py
modules/: __init__.py  ablation.py  activations.py  analysis.py  config.py  data.py  logging.py  models.py  storage.py  topology.py  training.py  utils.py  visualization.py
ntop/: __init__.py  analysis.py  gating.py  monitoring.py  plots.py  rl_strategy.py  utils.py
ntop/analysis/: __init__.py  distances.py  evolution.py  persistence.py
ntop/core/: __init__.py  activations.py  models.py  monitoring.py  training.py
ntop/data/: __init__.py  fashion_mnist.py  mnist.py
ntop/viz/: __init__.py  plots.py  temporal.py
scripts/: abalate.py  analyze.py  cach_utils.py  compare.py  pipeline.py  run.py  run_grid.py  train.py
tests/: test_core.py
