[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ntop"
version = "0.0.0a1"
description = "Topological analysis and pruning of neural networks using H0 persistence"
authors = [{name = "Jacob Molnia", email = "jrmolnia@wpi.edu"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "jax>=0.4.0",
    # Visualisation
    "matplotlib>=3.5.0",
    # Examples / CLI
    "click>=8.0.0",
    "tqdm>=4.0.0",
    "transformers>=4.30.0",
    "datasets>=2.0.0",
    "scipy>=1.9.0",
    "pandas>=1.5.0",
    "rich>=14.3.3",
    "torchvision>=0.26.0.dev20260323",
]

[tool.setuptools.packages.find]
include = ["ntop*"]

# ── Optional dependency groups ─────────────────────────────────────────────────
[project.optional-dependencies]
# Nightly PyTorch with Blackwell (sm_120) support for Turing GPU clusters
blackwell = [
    "torch>=2.12.0.dev0; sys_platform == 'linux'",
    "torchvision>=0.26.0.dev0; sys_platform == 'linux'",
    "torchaudio>=2.11.0.dev0; sys_platform == 'linux'",
    "triton; sys_platform == 'linux'",
]

# ── uv configuration ─────────────────────────────────────────────────────────
[tool.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[[tool.uv.index]]
name = "pytorch-nightly-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-nightly-cu128", extra = "blackwell", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-nightly-cu128", extra = "blackwell", marker = "sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-nightly-cu128", extra = "blackwell", marker = "sys_platform == 'linux'" },
]
triton = [
    { index = "pytorch-nightly-cu128", extra = "blackwell", marker = "sys_platform == 'linux'" },
]
